# rustchatService

./: .env.example  .gitignore  Cargo.toml  README.md  README_API.md  test_client.html
docs/: chat_ddl.sql  postgres_ddl.sql  secret_key_ddl.sql
docs/guides/: CHAT_EDGE_CASES.md  CHAT_SYSTEM_GUIDE.md  COMPLETE_FEATURES_SUMMARY.md  FINAL_COMPLETE_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_CHAT.md  SECRET_KEY_INTEGRATION.md  SECRET_KEY_SYSTEM.md
examples/: fastapi_integration_example.py  frontend_example.html  python_client_example.py
src/: chat.rs  comments.rs  db.rs  errors.rs  main.rs  rate_limit.rs  secret_key.rs
tests/: test_comments.py  test_delete_cascade.py  test_edge_cases.py  test_post_status.py  test_secret_keys.py
