[package]
name = "chatService"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
async-trait = "0.1"
thiserror = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
twox-hash = "1.6"
axum = "0.7"
utoipa = "4"
utoipa-swagger-ui = { version = "5", features = ["axum"] }
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
